feat: added some part

--- a/start/index.html
+++ b/start/index.html
@@ -48,11 +48,223 @@
           </div>
         </div>
       </div>
+      <hr>
       <div class="header-main">
-
-      </div>
+        <div class="header-main__content">
+          <h1 class="header-title">
+            Металлопрокат в наличии в Новосибирске от производителя с доставкой до вас за 1-2 дня
+            <br> по цене ниже рыночной
+          </h1>
+          <div class="header-text">
+            Склады и филиалы производства в 26 крупных городах по всей территории РФ
+          </div>
+          <div class="header-btn header-btn_main">
+            Получить прайс
+            с персональными ценами
+          </div>
+          <div class="header-btnPrice">
+            <div class="btnPrice-inner">
+              <div class="btnPrice-icon">
+                <img src="../start/images/btnPrice.png" alt="">
+              </div>
+              <div class="btnPrice-text">
+                Получите прайс <br>
+                с персональной ценой
+              </div>
+            </div>
+          </div>
+        </div>
     </div>
   </header>
+  <section class="price">
+    <div class="container container-price">
+      <h2 class="price-title">
+        Выгодные цены на металлопрокат в Новосибирске
+      </h2>
+      <div class="price-text">
+        Обратитесь к менеджеру и он отправит вам цены на нужные позиции
+      </div>
+      <h3 class="price-subtitle">
+        Посмотрите какие товарные группы есть в наличии в Новосибирске
+      </h3>
+      <div class="price-content">
+        <div class="price-content__top">
+          <div class="price-content__top-item price-content__top-item_1 price-content__top-item_close">
+            <div class="price-content__top-icon">
+              <img src="./images/price1.svg" alt="">
+            </div>
+            <div class="price-content__top-text">
+              Штрипс, лента оцинкованная
+            </div>
+          </div>
+          <div class="price-content__top-item price-content__top-item_2 price-content__top-item_close">
+            <div class="price-content__top-icon">
+              <img src="./images/price2.svg" alt="">
+            </div>
+            <div class="price-content__top-text">
+              Сетка
+            </div>
+          </div>
+          <div class="price-content__top-item price-content__top-item_3 price-content__top-item_close">
+            <div class="price-content__top-icon">
+              <img src="./images/price3.svg" alt="">
+            </div>
+            <div class="price-content__top-text">
+              Профиль <br>
+              оцинкованный
+            </div>
+          </div>
+          <div class="price-content__top-item price-content__top-item_4 price-content__top-item_close">
+            <div class="price-content__top-icon">
+              <img src="./images/price4.svg" alt="">
+            </div>
+            <div class="price-content__top-text">
+              Профнастил
+            </div>
+          </div>
+          <div class="price-content__top-item price-content__top-item_5 price-content__top-item_close">
+            <div class="price-content__top-icon">
+              <img src="./images/price5.svg" alt="">
+            </div>
+            <div class="price-content__top-text">
+              Черный <br>
+              металлопрокат
+
+            </div>
+          </div>
+          <div class="price-content__top-item price-content__top-item_6 price-content__top-item_close">
+            <div class="price-content__top-icon">
+              <img src="./images/price6.svg" alt="">
+            </div>
+            <div class="price-content__top-text">
+              Изделия <br>
+              на заказ
+            </div>
+          </div>
+        </div>
+        <div class="price-content__main price-content__main1 price-content__main_close">
+          <div class="price-content__main-img">
+            <img src="./images/price-main1.png" alt="">
+          </div>
+          <div class="price-content__main-info">
+            <ul class="price-content__main-list">Штрипс, лента оцинкованная
+              <li>Оцинкованный штрипс</li>
+              <li>Оцинкованная стальная лента</li>
+              <li>Оцинкованная полоса Г/К</li>
+            </ul>
+            <div class="header-btn header-btn_price">
+              Узнать стоимость
+            </div>
+          </div>
+        </div>
+        <div class="price-content__main price-content__main2 price-content__main_close">
+          <div class="price-content__main-img">
+            <img src="./images/price-main2.png" alt="">
+          </div>
+          <div class="price-content__main-info">
+            <ul class="price-content__main-list">Сетка
+              <li>Сетка сварная</li>
+              <li>Сетка ПВЛ</li>
+            </ul>
+            <div class="header-btn header-btn_price">
+              Узнать стоимость
+            </div>
+          </div>
+        </div>
+        <div class="price-content__main price-content__main3 price-content__main_close">
+          <div class="price-content__main-img">
+            <img src="./images/price-main3.png" alt="">
+          </div>
+          <div class="price-content__main-info">
+            <ul class="price-content__main-list">Профиль оцинкованный
+              <li>Профиль ГКЛ</li>
+              <li>Профиль фасадный</li>
+              <li>Профиль армирующий</li>
+              <li>Комплектующие</li>
+            </ul>
+            <div class="header-btn header-btn_price">
+              Узнать стоимость
+            </div>
+          </div>
+        </div>
+        <div class="price-content__main price-content__main4 price-content__main_close">
+          <div class="price-content__main-img">
+            <img src="./images/price-main4.png" alt="">
+          </div>
+          <div class="price-content__main-info price-content__main-info_prof">
+            <ul class="price-content__main-list price-content__main-list_prof">Профнастил
+              <li>Профнастил С8</li>
+              <li>Профнастил Н57</li>
+              <li>Профнастил Н60</li>
+              <li>Профнастил Н75</li>
+              <li>Профнастил НС35</li>
+
+              <li>Профнастил С13</li>
+              <li>Профнастил С18</li>
+              <li>Профнастил С21</li>
+              <li>Профнастил С44</li>
+              <li>Профнастил СП20</li>
+            </ul>
+            <div class="header-btn header-btn_price header-btn_price-prof">
+              Узнать стоимость
+            </div>
+          </div>
+        </div>
+        <div class="price-content__main price-content__main5 price-content__main_close">
+          <div class="price-content__main-img">
+            <img src="./images/price-main5.png" alt="">
+          </div>
+          <div class="price-content__main-info price-content__main-info_met">
+            <ul class="price-content__main-list">Листовой прокат
+              <li>Лист Х/К</li>
+              <li>Лист Г/К</li>
+              <li>Лист НЛГ</li>
+              <li>Лист ОЦ</li>
+              <li>Лист рифл</li>
+              <li>Лист ПВЛ</li>
+              <li>Лист полимер</li>
+            </ul>
+            <ul class="price-content__main-list">Сортовой прокат
+              <li>Арматура</li>
+              <li>Катанка</li>
+              <li>Круг</li>
+              <li>Проволока</li>
+              <li>Квадрат</li>
+              <li>Шестигранник</li>
+            </ul>
+            <ul class="price-content__main-list">Трубный прокат
+              <li>Труба профильная</li>
+              <li>Труба Б/Ш</li>
+              <li>Труба Э/С</li>
+            </ul>
+            <ul class="price-content__main-list">Фасонный прокат
+              <li>Балка</li>
+              <li>Уголок</li>
+              <li>Швеллер</li>
+            </ul>
+            <div class="header-btn header-btn_price header-btn_price_main5">
+              Узнать стоимость
+            </div>
+          </div>
+        </div>
+        <div class="price-content__main price-content__main6 price-content__main_close">
+          <div class="price-content__main-img">
+            <img src="./images/price-main6.png" alt="">
+          </div>
+          <div class="price-content__main-info">
+            <ul class="price-content__main-list">Изделия на заказ
+              <li>по любым вашим размерам</li>
+              <li>из интересующих марок стали</li>
+              <li>в соотвествии с ТУ и ГОСТ</li>
+            </ul>
+            <div class="header-btn header-btn_price">
+              Узнать стоимость
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/main.js"></script>
